--- a/resources/meuapp/src/app/post/post.component.html
+++ b/resources/meuapp/src/app/post/post.component.html
@@ -15,7 +15,15 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
+    <button mat-button color="primary" (click)="like()">LIKE</button>
     <button mat-button>SHARE</button>
+    <mat-icon
+      color="warn"
+      [matBadge]="post.likes"
+      matBadgePosition="above after"
+      matBadgeColor="warn"
+      [matBadgeOverlap]="false"
+      >favorite</mat-icon
+    >
   </mat-card-actions>
 </mat-card>
