--- a/resources/meuapp/src/app/post/post.component.html
+++ b/resources/meuapp/src/app/post/post.component.html
@@ -16,7 +16,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button color="primary" (click)="like()">LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-button color="accent" (click)="apagar()">APAGAR</button>
     <mat-icon
       color="warn"
       [matBadge]="post.likes"
